# ICE-Bench

./: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
data_construction/: pipeline.py
data_construction/agent/: base_agent.py  coder.py  decomposer.py
data_construction/data/: __init__.py  data_manager.py  data_reader.py  log_manager.py
data_construction/data/seed/: preprocess_deveval.py
data_construction/data/seed/autocodebench/: java_autocodebench.jsonl
data_construction/data/seed/mrgbench/: 01_docstring2ins.py  docker_warmup.py  java_repo_client.py  v3-MRGBench.json
data_construction/llms/: __init__.py  llm.py
data_construction/prompts/: codegen_evaluator.md  coder.md  coder_autocodebench.md  coder_mrgbench.md  decomposer.md  decomposer_mrgbench.md  instruction_analyzer.md  instruction_evaluator.md  instruction_generator.md
data_construction/service/: codegen.py  decomposition.py  sandbox_client.py
dataset/: java_function.jsonl  java_repository.jsonl  python_function.jsonl
environment/: README.md
environment/java_func/: README.md
environment/java_repo/: README.md  split_java_env_aa  split_java_env_ab
environment/python_func/: README.md  main.py
environment/python_func/service/: exec_service.py
environment/python_repo/: README.md
environment/python_repo/mt_deveval/: final_dataset.jsonl
evaluation/: data.py  eval.py  llm.py
script/: run_inference.sh
user_study/: annotation_guidelines.md
